# FinMathsLib-Cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  pricing_example.cpp
include/FinMaths/maths/: calculus.hpp  distributions.hpp  rng.hpp  statistics.hpp
src/: dummy.cpp
src/maths/: calculus.cpp  distributions.cpp  rng.cpp  statistics.cpp
tests/: CMakeLists.txt  test_calculus.cpp  test_distributions.cpp  test_placeholder.cpp  test_rng.cpp  test_statistics.cpp
